// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`tsc --showConfig ./presets/base.json 1`] = `
"{
    "compilerOptions": {
        "allowUnreachableCode": false,
        "allowUnusedLabels": false,
        "exactOptionalPropertyTypes": true,
        "noFallthroughCasesInSwitch": true,
        "noImplicitOverride": true,
        "noImplicitReturns": true,
        "noPropertyAccessFromIndexSignature": true,
        "noUncheckedIndexedAccess": true,
        "noUnusedLocals": true,
        "noUnusedParameters": true,
        "module": "preserve",
        "resolveJsonModule": true,
        "noEmit": true,
        "erasableSyntaxOnly": true,
        "verbatimModuleSyntax": true,
        "lib": [
            "esnext"
        ],
        "moduleDetection": "force",
        "incremental": true,
        "skipLibCheck": true,
        "isolatedModules": true,
        "preserveConstEnums": true
    },
    "include": [
        "./**/*",
        "./**/.*",
        "./**/.*/**/*",
        "./**/.*/**/.*"
    ]
}
"
`;

exports[`tsc --showConfig ./presets/bundler/base.json 1`] = `
"{
    "compilerOptions": {
        "allowUnreachableCode": false,
        "allowUnusedLabels": false,
        "exactOptionalPropertyTypes": true,
        "noFallthroughCasesInSwitch": true,
        "noImplicitOverride": true,
        "noImplicitReturns": true,
        "noPropertyAccessFromIndexSignature": true,
        "noUncheckedIndexedAccess": true,
        "noUnusedLocals": true,
        "noUnusedParameters": true,
        "module": "preserve",
        "resolveJsonModule": true,
        "noEmit": true,
        "erasableSyntaxOnly": true,
        "verbatimModuleSyntax": true,
        "lib": [
            "esnext"
        ],
        "moduleDetection": "force",
        "incremental": true,
        "skipLibCheck": true,
        "allowImportingTsExtensions": true,
        "allowJs": true,
        "checkJs": true,
        "isolatedModules": true,
        "preserveConstEnums": true
    },
    "include": [
        "./**/*",
        "./**/.*",
        "./**/.*/**/*",
        "./**/.*/**/.*"
    ]
}
"
`;

exports[`tsc --showConfig ./presets/tsc/base.json 1`] = `
"{
    "compilerOptions": {
        "allowUnreachableCode": false,
        "allowUnusedLabels": false,
        "exactOptionalPropertyTypes": true,
        "noFallthroughCasesInSwitch": true,
        "noImplicitOverride": true,
        "noImplicitReturns": true,
        "noPropertyAccessFromIndexSignature": true,
        "noUncheckedIndexedAccess": true,
        "noUnusedLocals": true,
        "noUnusedParameters": true,
        "module": "nodenext",
        "resolveJsonModule": true,
        "noEmit": true,
        "erasableSyntaxOnly": true,
        "verbatimModuleSyntax": true,
        "lib": [
            "esnext"
        ],
        "moduleDetection": "force",
        "incremental": true,
        "skipLibCheck": true,
        "isolatedDeclarations": true,
        "declaration": true,
        "declarationMap": true,
        "outDir": "./dist",
        "moduleResolution": "nodenext",
        "isolatedModules": true,
        "preserveConstEnums": true
    },
    "include": [
        "./src/**/*",
        "./src/**/.*",
        "./src/**/.*/**/*",
        "./src/**/.*/**/.*"
    ],
    "exclude": [
        "./dist"
    ]
}
"
`;
